@@ -1,5 +1,11 @@
 2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add constraints definition.
+	* src/solver.cc,
+	* src/solver.hh: Add types and getter/setter.
+
+2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add gradient function.
 	* src/dummy.cc: Add optional gradient to constructor.
 	* src/ipopt.cc: Use gradient in Ipopt if possible.
